# objectivepersonality.ai

./: .env.example  .gitignore  README.md  append_embeddings.py  benchmark.sh  benchmark_centroids.py  benchmark_classifiers.py  benchmark_neural_network.py  benchmark_proto_networks.py  benchmark_random_forest.py  benchmark_random_forest_hyperparams.py  benchmark_random_forest_loo.py  benchmark_weighted_centroids.py  pyproject.toml  saviours_demons.py  similarity_search.py  values.py
embeddings/: miniLM_embeddings.py  sfr_embeddings.py
objectivepersonality_ai/: ops.py  utils.py
objectivepersonality_ai/benchmarks/: centroids.py  neural_network.py  proto_networks.py
objectivepersonality_ai/classifiers/: centroids.py  classifier_model.py  neural_network.py  proto_networks.py  random_forest.py  random_forest_hyperparams.py  random_forest_loo.py  weighted_centroids.py
objectivepersonality_ai/embeddings/: embeddings_model.py  gritlm_embedding_model.py  miniLM_embeddings.py  sfr_embeddings.py  voyage2_embedding_model.py
scripts/: append_embeddings.py
train/: centroids.py  classifier_model.py  neural_network.py  proto_networks.py
typescript/: README.md  package-lock.json  package.json
typescript/src/: index.ts
utils/: utils.py
